# mini_fuzzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: test1.cpp  test2.cpp
mini_fuzzer/: config.py  coverage.py  dump.csv  fuzz.py  monitor.py  mutation.py
tests/: test1.cpp  test3.cpp
unit_test/: .coverage  test_coverage.py  test_mutation.py
